--- a/less/components/utility.less
+++ b/less/components/utility.less
@@ -8,7 +8,8 @@
 .col:after,
 form:after,
 form.form:not(.form-tight) .input-container:after,
-form.form-tight .form-row:after {
+form.form-tight .form-row:after,
+.btn-group:after {
 	content: "";
 	display: table;
 	clear: both;
